#1537 Webservice de Juntada
